Ajout de layout du forum

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="pseudo">nickname</string>
     <string name="btn_name">Let\'s Talk</string>
+    <string name="msg">Message</string>
+    <string name="btn_env_name">Send</string>
 
 </resources>
