--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,5 +5,6 @@
     <string name="btn_name">Let\'s Talk</string>
     <string name="msg">Message</string>
     <string name="btn_env_name">Send</string>
+    <string name="messErrorPseudo">Please enter a nickname</string>
 
 </resources>
