--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="btn_name">Parlons</string>
     <string name="msg">Message</string>
     <string name="btn_env_name">Envoyer</string>
+    <string name="messErrorPseudo">Veuillez entrer un pseudo</string>
 
 </resources>
