--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,10 @@
     <string name="msg">Message</string>
     <string name="btn_env_name">Envoyer</string>
     <string name="messErrorPseudo">Veuillez entrer un pseudo</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Accueil</string>
+    <string name="forum">Forums</string>
+    <string name="about_us">A propos de nous</string>
 
 </resources>
