Implémentation de l'activité about us dans la barre de navigation

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,5 +10,9 @@
     <string name="home">Home</string>
     <string name="forum">Forums</string>
     <string name="about_us">About us</string>
+    <string name="aboutUs">About Us</string>
+    <string name="auteurs">Authors</string>
+    <string name="menstioLegale">Legal Notices</string>
+    <string name="sigle">"lorem loem lorem iuqebbfuehf "</string>
 
 </resources>
