traduction et ajout du bouton de retour

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,7 +12,7 @@
     <string name="about_us">About us</string>
     <string name="aboutUs">About Us</string>
     <string name="auteurs">Authors</string>
-    <string name="menstioLegale">Legal Notices</string>
+    <string name="mention_legal">Legal Notices</string>
     <string name="sigle">"lorem loem lorem iuqebbfuehf "</string>
 
 </resources>
