--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="about_us">A propos de nous</string>
     <string name="aboutUs">A propos de nous</string>
     <string name="auteurs">Auteurs</string>
-    <string name="menstioLegale">Mention légale</string>
+    <string name="mention_legal">Mention légale</string>
     <string name="sigle">"lorem loem lorem iuqebbfuehf "</string>
 
 </resources>
