--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,12 +13,11 @@
     <string name="aboutUs">A propos de nous</string>
     <string name="auteurs">Auteurs</string>
     <string name="mention_legal">Mentions légales</string>
+    <string name="titre_objectifs">Objectifs</string>
+    <string name="objectifs">Le but de cette application est de permettre aux utilisateurs de discuter entre eux.
+Les utilisateurs peuvent rejoindre des salons de discussion et discuter avec les autres utilisateurs.</string>
     <string name="sigle">BlaBla\'App</string>
     <string name="legal_notices">
 Cette application a été développée dans le cadre des nos études en BUT Informatique.
-
-Le but de cette application est de permettre aux utilisateurs de discuter entre eux.
-Les utilisateurs peuvent rejoindre des salons de discussion et discuter avec les autres utilisateurs.
-
 Nous ne sommes pas responsables des propos tenus par les utilisateurs.    </string>
 </resources>
