--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,7 +6,12 @@
     <string name="msg">Message</string>
     <string name="btn_env_name">Send</string>
     <string name="messErrorPseudo">Please enter a nickname</string>
-
+    <string name="removeForum">Delete the forum</string>
+    <string name="askRemoveForum">Do you really want to delete this forum?</string>
+    <string name="deletedForum">Forum deleted</string>
+    <string name="notDeletedForum">Forum not deleted</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="home">Home</string>
     <string name="forum">Forums</string>
     <string name="about_us">About us</string>
