adding forums works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,10 @@
     <string name="askRemoveForum">Voulez-vous vraiment supprimer ce forum ?</string>
     <string name="deletedForum">Forum supprimé</string>
     <string name="notDeletedForum">Forum non supprimé</string>
+    <string name="addForum">Ajouter un forum</string>
+    <string name="addForumQuestion">Veuillez entrer le titre et la description du forum</string>
+    <string name="forumName">Nom du forum</string>
+    <string name="forumDescription">Description du forum</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
     <string name="home">Accueil</string>
