--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,6 +10,10 @@
     <string name="askRemoveForum">Do you really want to delete this forum?</string>
     <string name="deletedForum">Forum deleted</string>
     <string name="notDeletedForum">Forum not deleted</string>
+    <string name="addForum">Add a forum</string>
+    <string name="addForumQuestion">Please enter the title and description of the forum</string>
+    <string name="forumName">Forum name</string>
+    <string name="forumDescription">Forum description</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="home">Home</string>
