--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="addForumQuestion">Veuillez entrer le titre et la description du forum</string>
     <string name="forumName">Nom du forum</string>
     <string name="forumDescription">Description du forum</string>
+    <string name="selectForum">Accéder à ce forum ?</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
     <string name="home">Accueil</string>
