--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -15,6 +15,10 @@
     <string name="forumDescription">Forum description</string>
     <string name="selectForum">Access to this forum ?</string>
     <string name="selectingForum">Select a forum</string>
+    <string name="enterIp">Please enter the IP address of your server</string>
+    <string name="correctIp">Please enter a correct IP address</string>
+    <string name="ip">IP address</string>
+    <string name="select">Select</string>
     <string name="cancel">Cancel</string>
     <string name="add">Add</string>
     <string name="yes">Yes</string>
