--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,10 @@
     <string name="forumDescription">Description du forum</string>
     <string name="selectForum">Accéder à ce forum ?</string>
     <string name="selectingForum">Choisissez un forum</string>
+    <string name="enterIp">Veuillez entrer l\'adresse IP de votre serveur</string>
+    <string name="ip">Adresse IP</string>
+    <string name="correctIp">Veuillez entrer une adresse IP correcte</string>
+    <string name="select">Sélectionner</string>
     <string name="add">Ajouter</string>
     <string name="cancel">Annuler</string>
     <string name="yes">Oui</string>
