--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="enterPort">Port de votre serveur</string>
     <string name="port">Port (8080 par défaut)</string>
     <string name="protocol">Protocole</string>
+    <string name="changeServer">Configuration serveur</string>
     <string name="ip">Adresse IP</string>
     <string name="correctIp">Veuillez entrer une adresse IP correcte</string>
     <string name="select">Sélectionner</string>
