--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,12 +19,12 @@
     <string name="selectForum">Accéder à ce forum ?</string>
     <string name="selectingForum">Choisissez un forum</string>
     <string name="enterIp">Adresse IP de votre serveur</string>
-    <string name="enterPort">Port de votre serveur</string>
+    <string name="enterPort">"Port de votre serveur "</string>
     <string name="port">Port (5555 par défaut)</string>
     <string name="protocol">Protocole</string>
     <string name="changeServer">Configuration serveur</string>
     <string name="noConnection">Veuillez vous connecter à internet ou revoyez la configuration serveur</string>
-    <string name="ip">Adresse IP</string>
+    <string name="ip">Adresse IP (default Tchoutchou.ovh)</string>
     <string name="noConnectionTitle">Erreur dans l\'obtention des forums</string>
     <string name="correctIp">Veuillez entrer une adresse IP correcte</string>
     <string name="select">Sélectionner</string>
