add settings icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,6 @@ Nous ne sommes pas responsables des propos tenus par les utilisateurs.    </stri
     <string name="devSource">Développement d\'application</string>
     <string name="logo_with_name">Logo with name</string>
     <string name="info_plus">info plus</string>
+    <string name="back">retour</string>
+    <string name="settings">réglage</string>
 </resources>
